fixed upcoming event card alignment in event page

--- a/sbcs-website/src/components/UpcomingEventCard.css
+++ b/sbcs-website/src/components/UpcomingEventCard.css
@@ -14,6 +14,13 @@
     --hoverBlue: #204be8;
 }
 
+.upcoming-event-card-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .upcoming-event-box-p{
     display: flex;
     flex-direction: column;
